--- a/textbase/frontend/src/components/styles.css
+++ b/textbase/frontend/src/components/styles.css
@@ -13,11 +13,18 @@
     visibility: hidden;
   }
   
+  .customization-bubble label {
+    display: block;
+    text-align: left;
+    margin-right: 10px; /* adjust this value as needed */
+  }
+
+  
   .show-bubble {
     transform: translateZ(0);
     visibility: visible;
   }
-  
+
   .bubble-toggle-button {
     position: fixed;
     bottom: 10px;
@@ -25,3 +32,12 @@
     cursor: pointer;
   }
   
+  /* styles.css */
+
+.dots {
+  background: repeating-radial-gradient(black 0%, black 5%, white 5%, white 10%);
+}
+
+.stripes {
+  background: repeating-linear-gradient(45deg, black, black 10px, white 10px, white 20px);
+}
